bat.string1.lessons.bat.string1.StringSplosion.scala.error
stringSplosion:3: error: not found: value ar
  ar s=""
  ^stringSplosion:6: error: not found: value s
    s+=str.drop(i).take(i)
    ^stringSplosion:4: error: type mismatch;
 found   : Unit
 required: String
  for(i <- 0 to str.length)
        ^