bat.string1.lessons.bat.string1.StringSplosion.scala.code
def stringSplosion(str:String):String = 
{
  ar s=""
  for(i <- 0 to str.length)
  {
    s+=str.drop(i).take(i)
    
  }
}